2008-05-25  Jan Arne Petersen  <jpetersen@jpetersen.org>

	* gtk/gtkentry.c: (gtk_entry_class_init), (get_text_area_size),
	(gtk_entry_get_text_area_size), (gtk_entry_draw_frame):
	* gtk/gtkentry.h:
	* gtk/gtkspinbutton.c: (gtk_spin_button_class_init),
	(gtk_spin_button_realize), (gtk_spin_button_size_allocate),
	(gtk_spin_button_expose), (gtk_spin_button_draw_arrow),
	(gtk_spin_button_enter_notify), (gtk_spin_button_leave_notify),
	(gtk_spin_button_grab_notify), (gtk_spin_button_state_changed),
	(start_spinning), (gtk_spin_button_button_release),
	(gtk_spin_button_motion_notify), (gtk_spin_button_value_changed),
	(gtk_spin_button_get_text_area_size), (gtk_spin_button_real_spin),
	(gtk_spin_button_update): Reorder strange window hierarchy of the
	GtkSpinButton (#466000).

2008-05-25  Jan Arne Petersen  <jpetersen@jpetersen.org>

	* gtk/gtklabel.c: (get_layout_location): Subtract logical.x from x to
	fix the wrong position for right and center justified labels with
	logical.x > 0 (#530255).

2008-05-25  Jan Arne Petersen  <jpetersen@jpetersen.org>

	* gtk/gtkfilechooserdefault.c:
	(shortcuts_activate_volume_mount_cb): Ignore G_IO_ERROR_FAILED_HANDLED
	errors (#532262).

2008-05-25  Björn Lindqvist  <bjourne@gmail.com>

	* tests/pixbuf-lowmem.c
	* tests/pixbuf-random.c
	* tests/pixbuf-randomly-modified.c
	* tests/pixbuf-read.c
	* tests/pixbuf-threads.c
	* tests/testgtk.c
	* tests/testtreeview.c: Fix remaining compiler warnings in these
	files (#523751).

2008-05-25  Jaap A. Haitsma  <jaap@haitsma.org>

	reviewed by: Matthias Clasen

	* gtk/Makefile.am:
	* gtk/gtk.h:
	* gtk/gtk.symbols:
	* gtk/gtkshow.c: (gtk_show_uri):
	* gtk/gtkshow.h:
	Add gtk_show_uri to make showing uris really easy. Fixes bug #514396

2008-05-25  Jan Arne Petersen  <jpetersen@jpetersen.org>

	* gtk/gtkliststore.c: (list_store_text): Use type of the correct
	column (#529535).
	* tests/buildertest.c: (test_list_store): Add test.

2008-05-24  Matthias Clasen  <mclasen@redhat.com>
